# redb

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  clusterdb-v4.json  cross_platform_docker_steps.md  install_mono.md  small_corpus.txt
cluster_scoring/: check_clusters.py  data_prep.py  grid_search.py
clustering/: CMakeLists.txt  ThreadPool.h  base_similarity_scorer.h  cluster_set.cc  cluster_set.h  clustering_main.cc  egret_similarity_scorer.h  mcl_wrapper.cc  mcl_wrapper.h  program_options.cc  program_options.h  replication_main.cc  rex_similarity_scorer.cc  rex_similarity_scorer.h  rex_wrapper.cc  rex_wrapper.h  similarity_table.cc
clustering/evaluation/: CMakeLists.txt  eval_main.cc  program_args.cc  program_args.h
clustering/feature_matrix/: feature_matrix.cc  feature_matrix.h  feature_vector.cc  feature_vector.h  string_vector.cc  string_vector.h
clustering/similarity_table/: base_similarity_scorer.h  egret_filtration.cc  egret_filtration.h  egret_similarity_scorer.cc  egret_similarity_scorer.h  rex_similarity_scorer.cc  rex_similarity_scorer.h  similarity_table.cc  similarity_table.h  table_scorer.cc  table_scorer.h
clustering_experiment/: CMakeLists.txt  benchmarking.h  cluster_experiment.cc  cluster_experiment.h  main.cc  query_results.h  semantic_clustering.cc  semantic_clustering.h  set_comparison.cc  set_comparison.h
clustering_replication/: CMakeLists.txt  mcl_wrapper.h  replication_main.cc  rex_similarity_scorer.cc  rex_wrapper.cc  rex_wrapper.h  similarity_table.h
frontend/: README.md  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.module.ts
frontend/src/app/error/: error-state.ts  error.component.html  error.component.scss  error.component.ts  error.module.ts  error.service.ts
frontend/src/app/home/: home.component.html  home.component.scss  home.component.ts  home.module.ts
frontend/src/app/home/tool-card/: tool-card.component.html  tool-card.component.scss  tool-card.component.ts
frontend/src/app/query/: query-routing.module.ts  query.component.html  query.component.scss  query.component.ts  query.model.ts  query.module.ts  query.service.ts
frontend/src/app/query/examples/: examples.component.html  examples.component.scss  examples.component.ts
frontend/src/app/query/results/: results.component.html  results.component.scss  results.component.ts
frontend/src/app/query/tutorial-dialog/: tutorial-dialog.component.html  tutorial-dialog.component.ts
frontend/src/app/tracking/: tracking-info.model.ts  tracking.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
librereuse/: CMakeLists.txt
librereuse/db/: CMakeLists.txt  cluster.cc  parallel_regex_cluster_repository.cc  parallel_regex_cluster_repository.h  pattern_reader.cc  pattern_reader.h  regex_cluster_repository.cc  regex_cluster_repository.h
librereuse/query/: CMakeLists.txt  base_cluster_query.h  base_regex_query.cc  base_regex_query.h  cluster_match_query.cc  cluster_match_query.h  fuzzy_cluster_query.h
librereuse/util/: time_task.h
server/: CMakeLists.txt  apache-config.conf  apache-ssl.conf  apache-vhosts.conf  args_parser.cc  args_parser.h  endpoint_handler.cc  endpoint_handler.h  http_response.cc  http_response.h  main.cc  query_handler.cc  query_handler.h  tracker_handler.cc  tracker_handler.h
test/: CMakeLists.txt  cluster_match_query_test.cc  fuzzy_cluster_query_test.cc  parallel_regex_cluster_repository_test.cc  stats_test.cc
web/: CMakeLists.txt  main.cc  server.cc  server.h
